--- a/src/app/characteres/character/character.component.html
+++ b/src/app/characteres/character/character.component.html
@@ -6,7 +6,7 @@
     </mat-card-title>
     <mat-card-footer>
         <a href="{{character.urls[0].url}}" target="_blank" fxFlex mat-flat-button color="primary">
-            Details
+            Detalhes
         </a>
     </mat-card-footer>
 </mat-card>
