--- a/src/app/characteres/characteres.component.html
+++ b/src/app/characteres/characteres.component.html
@@ -17,25 +17,14 @@
     <div fxLayout= "row wrap" *ngIf="!showSearchResult">
         <div fxFlex="25" fxFlex.md="33" fxFlex.sm="50" fxFlex.xs="100" fxLayout="column"
         *ngFor="let character of allCharacters | async" style="padding: 5px;">
-            <app-character [character]="character">
-
-            </app-character>
+            <app-character [character]="character"></app-character>
         </div>
     </div>
 
     <div fxLayout= "row wrap" *ngIf="showSearchResult">
       <div fxFlex="25" fxFlex.md="33" fxFlex.sm="50" fxFlex.xs="100" fxLayout="column"
       *ngFor="let characters of searchedCharacter" style="padding: 5px;">
-        <mat-card>
-          <img mat-card-image src="{{characters.thumbnail.path}}.{{characters.thumbnail.extension}}" 
-          alt="{{characters.name}}">
-          <mat-card-title>{{characters.name}}</mat-card-title>
-          <mat-card-footer>
-              <a href="{{characters.urls[0].url}}" target="_blank" fxFlex mat-flat-button color="primary">
-                  Detalhes
-              </a>
-          </mat-card-footer>
-        </mat-card>
+        <app-character [character]="characters"></app-character>  
       </div>
   </div>
 </div>
