--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container bg-dark">
     <mat-toolbar color= "primary">
       <span>In|marvel</span> 
     </mat-toolbar>
