--- a/src/app/characteres/character/character.component.html
+++ b/src/app/characteres/character/character.component.html
@@ -5,7 +5,7 @@
         {{character.name}}
     </mat-card-title>
     <mat-card-footer>
-        <a href="{{character.urls[0].url}}" target="_blank" fxFlex mat-flat-button color="primary">
+        <a (click)="showCharacterDetails()" fxFlex mat-flat-button color="primary">
             Detalhes
         </a>
     </mat-card-footer>
